Tests/Conformance/Generated/Builtin/Constant/Bls12_381/G1/On_curve_serialised_not_compressed.lean
-- Auto-generated by gen_conformance_tests.py — do not edit manually.
import Tests.Conformance.ConformanceUtils
import PlutusCore.UPLC.ScriptEncoding.Basic

namespace Tests.Conformance.Generated.Builtin.Constant.Bls12_381.G1.On_curve_serialised_not_compressed

open Tests.Conformance

/-- error: Parsing error -/
#guard_msgs in
#conformance_import_uplc builtin_constant_bls12_381_G1_on_curve_serialised_not_compressed "../.plutus-conformance/plutus-conformance/test-cases/uplc/evaluation/builtin/constant/bls12-381/G1/on-curve-serialised-not-compressed/on-curve-serialised-not-compressed.uplc"

end Tests.Conformance.Generated.Builtin.Constant.Bls12_381.G1.On_curve_serialised_not_compressed
